Cleaned up project, fixed some styling overlapping issues

--- a/src/components/Media/Media.css
+++ b/src/components/Media/Media.css
@@ -2,16 +2,19 @@
 	width: 100%;
 	height: 100%;
 	display: flex;
+	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 }
 .camera-container video {
 	width: 100%;
 	height: auto;
+	max-width: 700px;
 }
 .camera-container canvas {
 	width: 100%;
 	height: auto;
+	max-width: 700px;
 }
 
 .powerOn {
